# nxbd

./: .gitignore  Cargo.toml  README.md  flake.nix  overlay.nix  package.nix
.github/workflows/: check.yml  pages.yaml
documentation/: mkdocs.yml
documentation/docs/: index.md  installation.md
documentation/docs/commands/: build.md  check.md  checks.md  status.md  switch-local.md  switch-remote.md
src/: main.rs
src/cli/: mod.rs
src/libnxbd/: configcheck.rs  flakeref.rs  mod.rs  nixcommands.rs  nixosattributes.rs  userinfo.rs
src/nixlib/: configcheck.rs  deployinfo.rs  flakeref.rs  mod.rs  nixcommands.rs  outputhandling.rs  sshkeys.rs  userinfo.rs
tests/: debug-vm.nix  switch-local.nix  switch-remote.nix  switch-test.nix  vm-config.nix
tests/project-folder/: configuration.nix  flake.nix  hardware-configuration.nix
