[package]
name = "nxbd"
version = "0.1.0"
edition = "2021"

description = "NixOS build and deploy tool"
authors = [ "Jacek Galowicz <jacek@applicative.systems>" ]
license = "GPL-3.0"
repository = "https://github.com/applicative-systems/nxbd"
categories = ["command-line-utilities", "development-tools"]
keywords   = ["nix", "nixos", "system"]

[dependencies]
clap          = { version = "4.5.17", features = ["derive", "env", "string"] }
clap_complete = "4.5.26"
nix = { version = "0.29.0", features = ["process", "user", "hostname"] }
owo-colors    = "4.1.0"
serde         = { version = "1.0.210", features = ["derive"] }
serde_json    = "1.0.128"
users = { version = "0.11.0", default-features = false, features = ["cache"] }

[lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf     = { level = "warn", priority = -1 }

redundant_closure_for_method_calls = "allow"
module_name_repetitions            = "allow"

[lints.rust]
unsafe_code = "forbid"
